Path problems and extra notifications
Fixed some incorrect paths and added a notification for when the user is trying to mount the folder when it is already mounted.

--- a/Contents/MacOS/config.example
+++ b/Contents/MacOS/config.example
@@ -5,5 +5,6 @@ domain=
 server_folder=
 local_folder=
 notification_title=
-notification_success=
-notification_failure=
+notification_success="Folder mounted!"
+notification_failure="Could not mount the folder!"
+notification_nothing2do="Is already mounted!"
